@@ -23,7 +23,11 @@ describe("ConfigManager", function () {
                 config: {
                     include: [ '../data/conf/no_includes.json'],
                     overrideMe: 'rootConfig',
-                    foo: 1
+                    foo: 1,
+                    tracks: [
+                        { label: "zoo", zonk: "quux"},
+                        { label: "zaz", honk: "beep", root: "root!"}
+                    ]
                 },
                 browser: { fatalError: function(error) { throw error; } },
                 skipValidation: true
@@ -38,6 +42,14 @@ describe("ConfigManager", function () {
                 expect(config.foo).toEqual(1);
                 expect(config.bar).toEqual(42);
                 expect(config.overrideMe).toEqual('rootConfig');
+
+                expect(config.tracks.length).toEqual(3);
+                expect(config.tracks[0].honk).toEqual('beep');
+                expect(config.tracks[0].noinclude).toEqual('also here');
+                expect(config.tracks[0].root).toEqual('root!');
+                expect(config.tracks[0].label).toEqual('zaz');
+                expect(config.tracks[1].label).toEqual('noinclude');
+                expect(config.tracks[2].label).toEqual('zoo');
             });
     });
 
@@ -46,7 +58,11 @@ describe("ConfigManager", function () {
                 config: {
                     include: [ '../data/conf/includes.json'],
                     overrideMe: 'rootConfig',
-                    foo: 1
+                    foo: 1,
+                    tracks: [
+                        { label: "zoo", zonk: "quux"},
+                        { label: "zaz", honk: "beep", root: "root!"}
+                    ]
                 },
                 browser: { fatalError: function(error) { throw error; } },
                 skipValidation: true
@@ -63,6 +79,18 @@ describe("ConfigManager", function () {
                 expect(config.overrideMe).toEqual('rootConfig');
                 expect(config.override2).toEqual('no_includes.json');
                 expect(config.zoz).toEqual(42);
+
+                expect(config.tracks.length).toEqual(4);
+
+                expect(config.tracks[0].label).toEqual('zaz');
+                expect(config.tracks[0].honk).toEqual('beep');
+                expect(config.tracks[0].noinclude).toEqual('also here');
+                expect(config.tracks[0].root).toEqual('root!');
+                expect(config.tracks[0].quux).toEqual('foo');
+
+                expect(config.tracks[1].label).toEqual('includes');
+                expect(config.tracks[2].label).toEqual('noinclude');
+                expect(config.tracks[3].label).toEqual('zoo');
             });
     });
 });
